late night stuffs

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         </nav>
 
         <section id="home">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div id="homeImg">
+            </div>
+            <div id="homeTxt">
+                <h3>Providing resources that can help you prevent, cope with, and beat cancer</h3>
+                <a href="#about">Learn More</a> 
+            </div>
         </section>
 
         <section id="about">
