--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet"> 
     </head>
     <body>
 
@@ -35,6 +36,7 @@
 
         <section id="home">
             <div id="homeImg">
+                <img src="img/logo3.png" alt="">
             </div>
             <div id="homeTxt">
                 <h3>Providing resources that can help you prevent, cope with, and beat cancer</h3>
